--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "component/buttons";
 @import "component/navbar";
 @import "component/pagination";
+@import "component/animation";
 
 //layout
 @import "layout/hero-section";
